changed photos in carousel and fixed image jumping after fadeIn  by removing slide class from carousel

--- a/style.css
+++ b/style.css
@@ -260,6 +260,6 @@ img {
 }
 
 @keyframes fadeIn {
-  0% { opacity: 0; }
+  0% { opacity: .1; }
   100% { opacity: 1; }
 }
